Bugfix z-index tooltip

--- a/src/app/components/login-registration/login/login.component.scss
+++ b/src/app/components/login-registration/login/login.component.scss
@@ -1,9 +1,5 @@
 @import "./../../../../styles.scss";
 
-.start-animation {
-  height: 100%;
-}
-
 .card-container {
   display: flex;
   justify-content: center;
